05_visual.html: remove <div> comment
This allows the tag matching abilities of Vim.

--- a/sample/05_visual.html
+++ b/sample/05_visual.html
@@ -1,4 +1,4 @@
-<!-- Move to different <div> tag and make everything upper case -->
+<!-- Move to different tags and make everything upper case -->
 <div class="container">
   <img class="icon" src="viemu-movie.gif" alt="ViEmu/VS: vi-vim under Visual Studio"/>
   <!-- Relative Buttons -->
